--- a/src/features/server/localization/header/locales/be.json
+++ b/src/features/server/localization/header/locales/be.json
@@ -1,3 +1,6 @@
 {
-  "title": "загаловак"
+  "competitions": "Спаборніцтвы",
+  "coaches": "Трэнеры",
+  "about": "Пра нас",
+  "members": "Удзельнікі"
 }
