--- a/src/features/server/localization/header/locales/ru.json
+++ b/src/features/server/localization/header/locales/ru.json
@@ -1,3 +1,6 @@
 {
-  "title": "заголовок"
+  "competitions": "Соревнования",
+  "coaches": "Тренеры",
+  "about": "О нас",
+  "members": "Участники"
 }
