--- a/src/features/server/localization/header/locales/en.json
+++ b/src/features/server/localization/header/locales/en.json
@@ -1,3 +1,6 @@
 {
-  "title": "title"
+  "competitions": "Competitions",
+  "coaches": "Coaches",
+  "about": "About us",
+  "members": "Members"
 }
