--- a/src/features/server/localization/registration/locales/ru.json
+++ b/src/features/server/localization/registration/locales/ru.json
@@ -1,3 +1,8 @@
 {
+  "registration": "Регистрация",
+  "name": "Имя",
+  "surname": "Фамилия",
+  "login": "Логин",
+  "password": "Пароль",
   "button": "Зарегистрироваться"
 }
