--- a/src/features/server/localization/registration/locales/be.json
+++ b/src/features/server/localization/registration/locales/be.json
@@ -1,3 +1,8 @@
 {
+  "registration": "Рэгістрацыя",
+  "name": "Імя",
+  "surname": "Прозвішча",
+  "login": "Лагін",
+  "password": "Пароль",
   "button": "Зарэгістравацца"
 }
