did authorization and fixed registration

--- a/src/features/server/localization/auth/locales/en.json
+++ b/src/features/server/localization/auth/locales/en.json
@@ -1,3 +1,11 @@
 {
-  "title": "title"
+  "title": "title",
+  "registration": "Registration",
+  "name": "Name",
+  "surname": "Surname",
+  "email": "Email",
+  "password": "Password",
+  "buttonRegister": "Зарегистрироваться",
+  "login": "Authorization",
+  "buttonLogin": "Login"
 }
