--- a/src/features/server/localization/auth/locales/ru.json
+++ b/src/features/server/localization/auth/locales/ru.json
@@ -1,3 +1,11 @@
 {
-  "title": "заголовок"
+  "title": "заголовок",
+  "registration": "Регистрация",
+  "name": "Имя",
+  "surname": "Фамилия",
+  "email": "Почта",
+  "password": "Пароль",
+  "buttonRegister": "Зарегистрироваться",
+  "login": "Вход",
+  "buttonLogin": "Войти"
 }
