--- a/src/features/server/localization/auth/locales/be.json
+++ b/src/features/server/localization/auth/locales/be.json
@@ -1,3 +1,11 @@
 {
-  "title": "загаловак"
+  "title": "загаловак",
+  "registration": "Рэгістрацыя",
+  "name": "Імя",
+  "surname": "Прозвішча",
+  "email": "Пошта",
+  "password": "Пароль",
+  "buttonRegister": "Зарэгістравацца",
+  "login": "Уваход",
+  "buttonLogin": "Увайсці"
 }
