code with errors client/server

--- a/src/features/server/localization/auth/locales/be.json
+++ b/src/features/server/localization/auth/locales/be.json
@@ -7,5 +7,7 @@
   "password": "Пароль",
   "buttonRegister": "Зарэгістравацца",
   "login": "Уваход",
-  "buttonLogin": "Увайсці"
+  "buttonLogin": "Увайсці",
+  "loginSuccess": "Уваход прайшоў паспяхова!",
+  "loginError": "Памылка!"
 }
