--- a/src/features/server/localization/auth/locales/ru.json
+++ b/src/features/server/localization/auth/locales/ru.json
@@ -7,5 +7,7 @@
   "password": "Пароль",
   "buttonRegister": "Зарегистрироваться",
   "login": "Вход",
-  "buttonLogin": "Войти"
+  "buttonLogin": "Войти",
+  "loginSuccess": "Вход прошел успешно!",
+  "loginError": "Ошибка!"
 }
