made login and started registration

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -1,7 +1,7 @@
 {
   "route": "Authorization",
-  "login": {
-    "label": "login"
+  "email": {
+    "label": "email"
   },
   "password": {
     "label": "password"
