--- a/public/locales/ru/auth.json
+++ b/public/locales/ru/auth.json
@@ -1,7 +1,7 @@
 {
   "route": "Авторизация",
-  "login": {
-    "label": "логин"
+  "email": {
+    "label": "почта"
   },
   "password": {
     "label": "пароль"
