--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -31,7 +31,8 @@
   },
   "header": {
     "login": "Войти",
-    "logout": "Выйти"
+    "logout": "Выйти",
+    "registration": "Зарегистрироваться"
   },
   "poster": "Афиша",
   "not_found": {
