--- a/public/locales/be/auth.json
+++ b/public/locales/be/auth.json
@@ -1,5 +1,12 @@
 {
   "route": "Аўтарызацыя",
+  "registration": "Рэгістрацыя",
+  "name": {
+    "label": "імя"
+  },
+  "lastName": {
+    "label": "прозвішча"
+  },
   "email": {
     "label": "пошта"
   },
@@ -7,7 +14,8 @@
     "label": "пароль"
   },
   "controls": {
-    "login": "Увайсці"
+    "login": "Увайсці",
+    "register": "Зарэгістравацца"
   },
   "error": {
     "emailInvalid": "Невалідны email"
