--- a/public/locales/be/translation.json
+++ b/public/locales/be/translation.json
@@ -32,7 +32,7 @@
   "header": {
     "login": "Увайсці",
     "logout": "Выйсці",
-    "registration": "Зарэгістравацца"
+    "register": "Зарэгістравацца"
   },
   "poster": "Афіша",
   "not_found": {
