--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -1,5 +1,12 @@
 {
   "route": "Authorization",
+  "registration": "Registration",
+  "name": {
+    "label": "first name"
+  },
+  "lastName": {
+    "label": "last name"
+  },
   "email": {
     "label": "email"
   },
@@ -7,7 +14,8 @@
     "label": "password"
   },
   "controls": {
-    "login": "Log in"
+    "login": "Log in",
+    "register": "Register"
   },
   "error": {
     "emailInvalid": "Invalid email"
