--- a/public/locales/ru/auth.json
+++ b/public/locales/ru/auth.json
@@ -1,5 +1,12 @@
 {
   "route": "Авторизация",
+  "registration": "Регистрация",
+  "name": {
+    "label": "имя"
+  },
+  "lastName": {
+    "label": "фамилия"
+  },
   "email": {
     "label": "почта"
   },
@@ -7,7 +14,8 @@
     "label": "пароль"
   },
   "controls": {
-    "login": "Войти"
+    "login": "Войти",
+    "register": "Зарегистрироваться"
   },
   "error": {
     "emailInvalid": "Некорректный email"
