--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -32,7 +32,7 @@
   "header": {
     "login": "Войти",
     "logout": "Выйти",
-    "registration": "Зарегистрироваться"
+    "register": "Зарегистрироваться"
   },
   "poster": "Афиша",
   "not_found": {
