fixed lint error, translation error, name in header

--- a/public/locales/be/auth.json
+++ b/public/locales/be/auth.json
@@ -21,7 +21,7 @@
     "emailInvalid": "Невалідны email"
   },
   "toast": {
-    "loginSuccess": "Добра заўсёлы,",
+    "loginSuccess": "Сардэчна запрашаем!",
     "loginError": "Аўтарызацыйная памылка"
   }
 }
