--- a/public/locales/ru/auth.json
+++ b/public/locales/ru/auth.json
@@ -21,7 +21,7 @@
     "emailInvalid": "Некорректный email"
   },
   "toast": {
-    "loginSuccess": "Добро пожаловать,",
+    "loginSuccess": "Добро пожаловать!",
     "loginError": "Ошибка авторизации"
   }
 }
