--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -21,7 +21,7 @@
     "emailInvalid": "Invalid email"
   },
   "toast": {
-    "loginSuccess": "Welcome,",
+    "loginSuccess": "Welcome!",
     "loginError": "Authorization error"
   }
 }
