--- a/public/locales/be/news.json
+++ b/public/locales/be/news.json
@@ -18,7 +18,13 @@
       "label": "Выява вакладкі"
     },
     "content": {
-      "label": "Тэкст новіны"
+      "label": "Тэкст новіны",
+      "title_ru": "Загаловак на рускай",
+      "title_be": "Загаловак на беларускай",
+      "title_en": "Загаловак на англійскай",
+      "description_ru": "Апісанне на рускай",
+      "description_be": "Апісанне на беларускай",
+      "description_en": "Апісанне на англійскай"
     }
   },
   "controls": {
