--- a/public/locales/ru/news.json
+++ b/public/locales/ru/news.json
@@ -18,7 +18,13 @@
       "label": "Изображение обложки"
     },
     "content": {
-      "label": "Текст новости"
+      "label": "Текст новости",
+      "title_ru": "Заголовок на русском",
+      "title_be": "Заголовок на белорусском",
+      "title_en": "Заголовок на английском",
+      "description_ru": "Описание на русском",
+      "description_be": "Описание на белорусском",
+      "description_en": "Описание на английском"
     }
   },
   "controls": {
