edited deleting news and editing news photo

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,53 +1,143 @@
 {
   "sidebar": {
-    "news": "News",
+    "main": "Main",
     "admin": "Administration",
+    "news": "News",
     "events": "Events",
     "meetings": "Meetings",
     "notifications": "Notifications",
     "voting": "Voting",
     "technicalWorks": "Technical Works",
-    "loyalty": "Loyalty Programs",
+    "loyalty": "Loyalty Program",
+    "advertisement": "Advertising",
+    "employee_announcements": "Employee Announcements",
     "poster": "Poster",
     "activity": "Activities",
     "services": "Services",
+    "invocation": "Requests and Applications",
+    "requests": "Requests",
+    "applications": "Applications",
+    "knowledge": "Knowledge Base",
     "settings": "Settings",
+    "announcements": "Announcements",
+    "accounting": "Accounting",
+    "statistic": "Reports and Statistics",
+    "security": "Security",
+    "engineering": "Engineering Systems",
+    "inform": "Information",
+    "passport": "Passport Desk",
     "users": "Users",
-    "user": "Personal account",
-    "championships": "Championships",
-    "results": "Results",
-    "judges": "Judges",
-    "teams": "Teams",
-    "coaches": "Coaches",
-    "members": "Members",
-    "disciplines": "Disciplines",
-    "titles": "Titles"
+    "access": "Access Control",
+    "intercom": "Intercom",
+    "video": "Video Surveillance",
+    "energy": "Energy resources",
+    "heating": "Heating points",
+    "lifts": "Lifts",
+    "residents": "Residents",
+    "employees": "Employees",
+    "accessRights": "Access Rights",
+    "roles": "Roles"
   },
   "header": {
-    "login": "Log In",
-    "logout": "Logout",
-    "register": "Register"
-  },
-  "footer": {
-    "days": "Monday-Friday"
+    "login": "Login",
+    "logout": "Logout"
   },
   "poster": "Poster",
   "not_found": {
     "title": "Page Not Found",
-    "back": "Go Back"
+    "text": "Wrong address or this page does not exist",
+    "back": "Go Back",
+    "toMain": "Home"
+  },
+  "forbidden": {
+    "title": "Access error",
+    "text": "The page may not be available or you may not have permission to open it.",
+    "back": "Go Back",
+    "toMain": "Home"
+  },
+  "toast": {
+    "deleteSuccess": "Deleted successfully",
+    "deleteError": "Could not delete",
+    "updateSuccess": "Updated successfully",
+    "updateError": "Could not update",
+    "createSuccess": "Created successfully",
+    "createError": "Could not create",
+    "notFound": "Could not retrieve data from server",
+    "unforeseen": "Unforeseen error"
   },
   "errors": {
     "required": "Field is required",
-    "max256": "Title must not be longer than 256 characters",
-    "invalidFormat": "Incorrect format",
-    "getError": "Failed to retrieve data from the server"
+    "max256": "Title should be less than 256 characters",
+    "invalidFormat": "Invalid format",
+    "invalidIp": "Invalid IP address",
+    "getError": "Could not retrieve data from server",
+    "video": "Sorry, your browser does not support embedded video.",
+    "passwordPattern": "Password must be at least 8 characters and contain at least one number and one uppercase letter",
+    "passwordMatch": "Passwords do not match"
   },
-  "coaches": {
-    "experience": "Experience:",
-    "years": "years",
-    "team": "Team:"
+  "actions": {
+    "reset": "Reset"
   },
-  "titles": {
-    "member": "Member of BFCST:"
-  }
+  "controls": {
+    "publish": "Publish",
+    "refresh": "Refresh",
+    "cancel": "Cancel",
+    "draft": "Save Draft",
+    "create": "Create",
+    "archive": "Go to Archived",
+    "actual": "Go to Current",
+    "find": "Search",
+    "delete": "Delete",
+    "greetings": "Good Day",
+    "preview": "Preview",
+    "addPhone": "Add Phone Number"
+  },
+  "remove": {
+    "title": "Are you sure you want to delete? This action cannot be undone",
+    "text": "This action cannot be undone"
+  },
+  "search": "Search",
+  "greetings": "Good Day",
+  "all": "All",
+  "month": [
+    "January",
+    "February",
+    "March",
+    "April",
+    "May",
+    "June",
+    "July",
+    "August",
+    "September",
+    "October",
+    "November",
+    "December"
+  ],
+  "popup": {
+    "preview": "Preview",
+    "edit": "Edit",
+    "map": "Open on Map",
+    "delete": "Delete",
+    "open": "Open",
+    "markAsFailed": "Mark as failed",
+    "personal_notification": "Personal notification"
+  },
+  "period": {
+    "from": "From",
+    "to": "To"
+  },
+  "footer": {
+    "northWaterfront": "OOO «Managing Organization North Waterfront»",
+    "address": "g. Minsk, ul. Sverdlova 11, of.329",
+    "advertisement": "Buy an apartment in 'North Waterfront'",
+    "therms": "Terms of Use",
+    "privacy": "Privacy Policy"
+  },
+  "filters": {
+    "all": "All",
+    "actual": "Actual",
+    "closed": "Closed"
+  },
+  "discount": "Discount",
+  "rarus": "Migration to 1C Rarus"
 }
