--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,54 +1,82 @@
 {
   "sidebar": {
-    "news": "Новости",
+    "main": "Главная",
     "admin": "Администрирование",
+    "news": "Новости",
     "events": "События",
     "meetings": "Собрания",
     "notifications": "Уведомления",
     "voting": "Голосования",
     "technicalWorks": "Технические работы",
-    "loyalty": "Программы лояльности",
+    "loyalty": "Программа лояльности",
+    "advertisement": "Реклама",
+    "employee_announcements": "Объявления для сотрудников",
     "poster": "Афиша",
     "activity": "Активности",
     "services": "Услуги",
+    "invocation": "Заявки и обращения",
+    "requests": "Заявки",
+    "applications": "Обращения",
+    "knowledge": "База знаний",
     "settings": "Настройки",
+    "announcements": "Информационные сообщения",
+    "accounting": "Учет",
+    "statistic": "Отчетность и статистика",
+    "security": "Безопасность",
+    "engineering": "Инженерные системы",
+    "inform": "Информирование",
+    "passport": "Паспортный стол",
     "users": "Пользователи",
-    "user": "Личный кабинет",
-    "championships": "Соревнования",
-    "results": "Результаты соревнований",
-    "judges": "Судьи",
-    "teams": "Команды",
-    "coaches": "Тренеры",
-    "members": "Участники федерации",
-    "disciplines": "Дисциплины",
-    "titles": "Титулы"
+    "access": "Контроль доступа",
+    "intercom": "Домофония",
+    "video": "Видеонаблюдение",
+    "energy": "Энергоресурсы",
+    "heating": "Тепловые пункты",
+    "lifts": "Лифты",
+    "residents": "Жильцы",
+    "employees": "Сотрудники",
+    "accessRights": "Права доступа",
+    "roles": "Роли"
   },
   "header": {
     "login": "Войти",
-    "logout": "Выйти",
-    "register": "Зарегистрироваться"
-  },
-  "footer": {
-    "days": "Понедельник-Пятница"
+    "logout": "Выйти"
   },
   "poster": "Афиша",
   "not_found": {
     "title": "Страница не найдена",
-    "back": "Вернуться назад"
+    "text": "Неправильно набран адрес или такой страницы не существует",
+    "back": "Вернуться назад",
+    "toMain": "На главную"
+  },
+  "forbidden": {
+    "title": "Ошибка доступа",
+    "text": "Возможно, страница недоступна или отсутствует разрешение открывать ее.",
+    "back": "Вернуться назад",
+    "toMain": "На главную"
+  },
+  "toast": {
+    "deleteSuccess": "Удалено успешно",
+    "deleteError": "Не удалось удалить",
+    "updateSuccess": "Обновлено успешно",
+    "updateError": "Не удалось обновить",
+    "createSuccess": "Создано успешно",
+    "createError": "Не удалось создать",
+    "notFound": "Не удалось получить данные с сервера",
+    "unforeseen": "Непредвиденная ошибка"
   },
   "errors": {
-    "required": "Поле обязательно для заполнения",
-    "max256": "Заголовок должен быть не длиннее 256 символов",
-    "invalidFormat": "Неверный формат",
-    "getError": "Не удалось получить данные с сервера"
+    "required": "Поле обязательно для заполнения ",
+    "max256": "Заголовок должен быть не длиннее 256 символов ",
+    "invalidFormat": "Неверный формат ",
+    "invalidIp": "Неверный IP-адрес",
+    "getError": "Не удалось получить данные с сервера ",
+    "video": "Извините, ваш браузер не поддерживает встроенное видео. ",
+    "passwordPattern": "Пароль должен быть не короче 8 символов и содержать хотя бы одну цифру и одну заглавную букву",
+    "passwordMatch": "Пароли не совпадают"
   },
-  "coaches": {
-    "experience": "Опыт:",
-    "years": "лет",
-    "team": "Команда:"
-  },
-  "titles": {
-    "member": "Участник БФЧКП:"
+  "actions": {
+    "reset": "Сбросить"
   },
   "controls": {
     "publish": "Опубликовать",
@@ -56,10 +84,60 @@
     "cancel": "Отмена",
     "draft": "Сохранить черновик",
     "create": "Создать",
-    "archive": "Перейти в архив",
+    "archive": "Перейти в удаленные",
     "actual": "Перейти к актуальным",
     "find": "Поиск",
     "delete": "Удалить",
-    "preview": "Предпросмотр"
-  }
+    "greetings": "Добрый день",
+    "preview": "Предпросмотр",
+    "addPhone": "Добавить номер телефона"
+  },
+  "remove": {
+    "title": "Вы уверены, что хотите удалить?",
+    "text": "Это действие нельзя будет отменить"
+  },
+  "search": "поиск",
+  "greetings": "Добрый день",
+  "all": "Все",
+  "month": [
+    "Январь",
+    "Февраль",
+    "Март",
+    "Апрель",
+    "Май",
+    "Июнь",
+    "Июль",
+    "Август",
+    "Сентябрь",
+    "Октябрь",
+    "Ноябрь",
+    "Декабрь"
+  ],
+  "popup": {
+    "preview": "Просмотр",
+    "edit": "Редактировать",
+    "map": "Открыть на карте",
+    "delete": "Удалить",
+    "open": "Открыть",
+    "markAsFailed": "Отметить как несостоявшееся",
+    "personal_notification": "Персональное уведомление"
+  },
+  "period": {
+    "from": "С",
+    "to": "По"
+  },
+  "footer": {
+    "northWaterfront": "ООО «Управляющая организация Северный Берег»",
+    "address": "г. Минск, ул. Свердлова 11, оф.329",
+    "advertisement": "Купить квартиру в «Северном Береге»",
+    "therms": "Условия иcпользования",
+    "privacy": "Политика конфиденциальности"
+  },
+  "filters": {
+    "all": "Все",
+    "actual": "Актуальные",
+    "closed": "Завершенные"
+  },
+  "discount": "Скидка",
+  "rarus": "Переход в 1С Рарус"
 }
