fixed translation, fixed width of table header

--- a/public/locales/be/translation.json
+++ b/public/locales/be/translation.json
@@ -54,7 +54,9 @@
     "required": "Поле абавязковае для запаўнення",
     "create": "Не атрымалася дадаць запіс",
     "update": "Не атрымалася абнавіць інфармацыю",
-    "delete": "Не атрымалася выдаліць запіс"
+    "delete": "Не атрымалася выдаліць запіс",
+    "list": "Не ўдалося атрымаць спіс. Магчыма, вы не аўтарызаваны!",
+    "notFound": "Не ўдалося знайсці інфармацыю"
   },
   "success": {
     "login": "Вы ўвайшлі паспяхова!",
