--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -54,7 +54,9 @@
     "required": "Поле обязательно для заполнения",
     "create": "Не удалось добавить запись",
     "update": "Не удалось обновить информацию",
-    "delete": "Не удалось удалить запись"
+    "delete": "Не удалось удалить запись",
+    "list": "Не удалось получить список. Возможно, вы не авторизованы!",
+    "notFound": "Не удалось найти информацию"
   },
   "success": {
     "login": "Вы вошли успешно!",
